--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -30,6 +30,7 @@ services:
       - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    restart: unless-stopped
     healthcheck:
       test: pg_isready
       interval: 2s
